--- a/category.html
+++ b/category.html
@@ -49,7 +49,7 @@
                 <p class="text-padding p-mar" style="padding-bottom: 8px;">Click the "Copy" button on the midi you think sounds good. Enter the game and paste it into the "MIDI Data" text box in the Band menu in game.</p>
             </div>
 
-            <div id="listcontainer" class="center max-wid" style="height: auto !important; width: 60%; background-color: rgb(189, 255, 255); font-family: Arial, Helvetica, sans-serif; padding-top: 5px; padding-bottom: 5px; margin-top: 25px;">
+            <div id="listcontainer" class="center max-wid" style="height: auto !important; width: 60%; background-color: rgb(189, 255, 255); font-family: Arial, Helvetica, sans-serif; padding-top: 5px; padding-bottom: 5px; margin-top: 25px; margin-bottom: 25px;">
                 <div class="item" style="display: none;" id="template">
                     <p>Title</p>
                     <button>Copy</button>
